[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydiode"
version = "0.0.3"
authors = [
    { name="Peter Story", email="peter.garth.story@gmail.com" },
]
description = "Transfer data through a unidirectional network (i.e., a data diode)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ClarkuCSCI/pydiode"
"Bug Tracker" = "https://github.com/ClarkuCSCI/pydiode/issues"

[project.scripts]
pydiode = "pydiode.pydiode:main"
pydiode-gui = "pydiode.gui.main:main"
